--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ node_js:
 addons:
   firefox: "latest"
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 before_install:
   npm install karma-cli -g
