--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
     "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-requirejs": "^1.1.0",
     "mocha": "^3.5.0",
+    "requirejs": "^2.3.4",
     "should": "^11.2.1"
   }
 }
