--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "6"
+  - "4"
 
 addons:
-  firefox: "latest"
+  chrome: "latest"
 
 before_script:
   - "export DISPLAY=:99.0"
