--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ node_js:
 addons:
   chrome: "stable"
 
+before_install:
+  npm install karma-cli -g
+
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
-before_install:
-  npm install karma-cli -g
+after_success:
+  - "npm run report"
