--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "6"
 
 addons:
-  firefox: "latest"
+  chrome: "stable"
 
 before_script:
   - "export DISPLAY=:99.0"
@@ -11,4 +11,5 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 before_install:
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   npm install karma-cli -g
