--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: node_js
-node_js:
+node_js: 
   - "6"
-
 addons:
-  chrome: "stable"
-
+  - chrome: "stable"
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-
 before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  npm install karma-cli -g
+  - npm install karma-cli -g
