--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,13 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
+install:
+  - npm install
+
+script:
+  - npm test
+after_success:
+  - npm run coveralls
+
 before_install:
   npm install karma-cli -g
