--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
 before_install:
   npm install karma-cli -g
 after_script: 
-  npm install coveralls -S && npm run test-cov
+  npm install coveralls -S && npm run test-cov && rm -rf coverage
