--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "karma-coverage": "^1.1.1",
     "should": "^11.2.1"
   }
 }
