--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,16 @@
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
     "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "xargs": "^1.1.3"
   }
 }
