--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: node_js
+sudo: true
 node_js:
   - "6"
-
+cache:
+  directories:
+    - node_modules
 addons:
   chrome: "latest"
 
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  - npm test
+  - npm run dev
+  - npm run build
+  - npm run checkdir
 
 before_install:
-  npm install karma-cli -g
+  - npm install
+after_script:
+  - npm run coverage
