--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,12 @@ node_js:
 
 addons:
   firefox: "latest"
-
+env:  
+  global:
+    - CODECOV_TOKEN: c5a6998f-8f7d-42f6-b7a2-5a005083bd77
+script:  
+  - istanbul cover node_modules/mocha/bin/_mocha
+  - cat ./coverage/coverage.json | node_modules/codecov.io/bin/codecov.io.js
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
