--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ before_script:
 before_install:
   npm install karma-cli -g
 
-after_success:
-  npm run report
+install
+   - npm install
+
+script:
+  - npm run coveralls
