--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start",
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly"
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly"
   },
   "repository": {
     "type": "git",
