--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
+  - npm install karma-cli -g
+after_script:
+  - npm run coveralls
