--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_script:
 
 before_install:
   - npm install karma-cli -g
-after_script:
-  - npm run coveralls
+after_success:
+  npm run coveralls
