--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+after_success:
+  - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
