--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
-before_install:
-  npm install karma-cli -g
-
+branches:
+  only:
+    - master
+install:
+  - npm install
+script:
+  - npm test
 after_success:
-  npm run report
+  - npm run coveralls
