--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
-branches:
-  only:
-    - master
-install:
-  - npm install
-script:
-  - npm test
-after_success:
-  - npm run coveralls
+before_install:
+  npm install karma-cli -g
+after_script:
+  npm install coveralls -S && npm run test-cov && rm -rf coverage
