--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,15 @@ node_js:
 
 addons:
   firefox: "latest"
+  chrome: "latest"
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
+after_script: 'cat coverage/lcov.info | coveralls'
+
 before_install:
   npm install karma-cli -g
+  npm install istanbul -g
