--- a/package.json
+++ b/package.json
@@ -20,13 +20,31 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
+    "blanket": "^1.2.3",
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
+    "jscoverage": "^0.6.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-requirejs": "^1.1.0",
     "mocha": "^3.5.0",
+    "mocha-html-cov-reporter": "^1.0.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "requirejs": "^2.3.4",
     "should": "^11.2.1"
+  },
+  "config": {
+    "blanket": {
+      "pattern": "./quz"
+    }
+  },
+  "dependencies": {
+    "karma-coveralls": "^1.1.2",
+    "karma-webpack": "^2.0.4",
+    "webpack": "^3.5.2"
   }
 }
