--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "6"
 
 addons:
-  firefox: "latest"
+  Chrome: "latest"
 
 before_script:
   - "export DISPLAY=:99.0"
@@ -12,3 +12,6 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+after_success:
+  "npm run report"
