--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,9 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+script:
+  - npm run cover
+
+after_success:
+  - npm run coveralls
