--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,5 @@ before_script:
 before_install:
   npm install karma-cli -g
 
-script:
-  - npm run cover
-
 after_success:
-  - npm run coveralls
+  npm install coveralls -S && npm run coveralls
