--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: node_js
 node_js:
-  - "6"
+  - "4"
 
 addons:
-  firefox: "latest"
-  chrome: "latest"
+  chrome: "stable"
+
+before_install:
+  npm install karma-cli -g
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
-after_script: 'cat coverage/lcov.info | coveralls'
-
-before_install:
-  npm install karma-cli -g
-  npm install istanbul -g
+after_success:
+  - "npm run report"
