--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
-  npm install karma -g
+  - npm install -g karma-cli
+  - npm install -g karma
+  - npm install -g mocha
