--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ before_script:
 before_install:
   - npm install karma-cli -g
 
-after_success:
-  - "npm run report"
+# after_success:
+#   - "npm run report"
