--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/wallaceyuan/homework1/issues"
   },
-  "homepage": "https://github.com/wallaceyuan/homework1#readme"
+  "homepage": "https://github.com/wallaceyuan/homework1#readme",
+  "devDependencies": {
+    "karma": "^1.7.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.5.0",
+    "should": "^11.2.1"
+  }
 }
