--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "6"
 
 addons:
-  Chrome: "latest"
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
@@ -12,6 +12,4 @@ before_script:
 
 before_install:
   npm install karma-cli -g
-
-after_success:
-  "npm run report"
+  npm install
