--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,14 @@ node_js:
 addons:
   firefox: "latest"
 
+script: node_modules/karma/bin/karma start karma.conf.js --single-run 
+
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
