'第二次尝试'

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ addons:
 script: node_modules/karma/bin/karma start karma.conf.js --single-run 
 
 before_script:
+  - export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
-before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+# before_install:
+#   - export CHROME_BIN=chromium-browser
+#   - export DISPLAY=:99.0
+#   - sh -e /etc/init.d/xvfb start
