--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 node_js:
-  - "6"
-
-addons:
-  firefox: "latest"
-
+  - "9"
 before_script:
+  - npm install -g mocha
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-
-before_install:
-  npm install karma-cli -g
+sudo: required
+env:
+  - MOZ_HEADLESS=1
+addons:
+  firefox: latest
+  chrome: stable
