--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "run": "node bin/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
+    "karma-coverage": "^1.1.1",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
   },
