--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 node_js:
-  - "6"
+  - 8
 
 addons:
   firefox: "latest"
 
-before_script:
+before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 
-before_install:
-  npm install karma-cli -g
+before_script:
+  - npm install -g mocha
