--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+  
+after_success:
+  - npm run coveralls
