--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-coverage": "^1.1.1",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
   }
