--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: required
+dist: trusty
 language: node_js
 node_js:
   - "8"
 addons:
-  firefox: stable
-  chrome: stable
+  firefox: "latest"
+  chrome: "latest"
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
