--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "8"
 addons:
   firefox: "latest"
-  chrome: "latest"
+  chrome: "stable"
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
