--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "karma-coverage": "^1.1.1",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "karma-coveralls": "^1.1.2"
   }
 }
