--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start",
+    "cover": "istanbul cover _mocha",
     "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
@@ -24,10 +25,13 @@
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
     "karma": "^1.7.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "karma-coveralls": "^1.1.2"
   }
 }
