--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - "6"
+  - "8"
 
 addons:
   firefox: "latest"
@@ -12,3 +13,7 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+script: 
+  - npm test
+
