--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "karma-chrome-launcher": "^2.2.0"
   }
 }
