--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+sudo: true
 node_js:
   - "6"
 
@@ -13,3 +14,6 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+after_script:
+  - make test-coveralls
