--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_script:
 before_install:
   npm install karma-cli -g
 
-after_script:
-  - make test-coveralls
+after_success:
+  - npm run coveralls
