--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ before_script:
 before_install:
   npm install karma-cli -g
 
-after_success:
-  - npm run coveralls
+script: "npm run test"
+
+after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
