--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -21,16 +20,14 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
-    "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
-    "karma-spec-reporter": "0.0.32",
     "mocha": "^3.5.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "should": "^11.2.1"
   },
   "dependencies": {}
