--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,6 @@ before_script:
 
 before_install:
   npm install karma-cli -g
+
+after_success:
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
