测试覆盖率 - 02

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,11 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
 before_install:
-  npm install karma-cli -g
-  
+  - npm install karma-cli -g
+  - npm install coveralls --save-dev
+install:
+  - npm install
+
 script: 
   - npm test
 
