--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 sudo: required
-dist: trusty
 language: node_js
 node_js:
   - "8"
@@ -12,3 +11,5 @@ before_script:
 before_install:
   npm install karma-cli -g
   npm install
+after_success:
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
