--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "istanbul cover --report lcov karma start"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,14 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
+    "istanbul": "^0.4.5",
     "karma": "^1.7.0",
-    "karma-firefox-launcher": "^1.0.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
     "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
-  },
-  "dependencies": {
-    "karma-coveralls": "^1.1.2"
   }
 }
