--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ node_js:
   - "6"
 
 addons:
-  firefox: "latest"
+  -firefox: latest
+  -chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
