--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm install
+cache:
+  directories:
+    - node_modules
+after_script:
+  - npm run coverage
