--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
-    "run": "node bin/server.js"
+    "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --colors ./test/test.js",
+    "coverage": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,10 @@
     "karma-mocha": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "mocha": "^3.5.0",
+    "coveralls": "*",
     "should": "^11.2.1"
   },
   "dependencies": {
-    "phantomjs": "^2.1.7",
-    "url-extract": "^0.2.6"
+    "phantomjs": "^2.1.7"
   }
 }
