--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
-    "cover": "node ./node_modules/.bin/istanbul cover ",
+    "test": "node ./node_modules/.bin/istanbul cover karma start",
     "coverage": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
