--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/.bin/istanbul cover karma start",
-    "coverage": "cat ./coverage/lcov.info | coveralls"
+    "test": "karma start",
+    "report": "find coverage -name lcov.info -print0 | xargs -0 cat | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
