--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install
+  - sleep 3 # give xvfb some time to start
+before_install:
+  npm install karma-cli -g
 after_script:
-  - npm run coverage
+  - npm run report
