--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "6"
-
+  - "6.10.0"
+sudo: required
 addons:
-  firefox: "latest"
+  chrome: stable
 
 before_script:
   - "export DISPLAY=:99.0"
