--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "karma-coverage": "^1.1.1"
   }
 }
