--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,2 @@
-service_name: travis-pro
-repo_token: qc6awyZ1RZwbWpWnF7LNGTBNaqtf4jrty
+service_name: travis
+repo_token: rObd85Vdmy2GqXGSn2VRuD8kAF0x2ILMr
