--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "directories": {
     "test": "karma start"
   },
-  "scirpts": {
-    "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --colors ./configs/mocha/**/*.test.js",
-    "coverage": "cat ./coverage/lcov.info | coveralls"
+  "scripts": {
+    "test": "karma start",
+    "coveralls": "find coverage -name lcov.info -print0 | xargs -0 cat | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/mayufo/homework1-another-coverage-#readme",
   "devDependencies": {
-    "coveralls": "^2.13.3",
-    "istanbul": "^0.4.5",
+    "coveralls": "^2.13.1",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
@@ -31,9 +30,5 @@
     "karma-mocha-reporter": "^2.2.3",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
-  },
-  "dependencies": {
-    "coveralls": "^2.13.3",
-    "mocha-lcov-reporter": "^1.3.0"
   }
 }
