--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/FE-star/homework1#readme",
   "devDependencies": {
-    "karma": "^1.7.0",
+    "jsdom": "^14.0.0",
+    "karma": "^1.7.1",
     "karma-firefox-launcher": "^1.0.1",
+    "karma-jsdom-launcher": "^7.1.0",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.5.0",
     "should": "^11.2.1"
