修改：修改travis 启动xvfb的方式

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ cache:
 addons:
   chrome: stable
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+
+dist: xenial
+services:
+  - xvfb
+
+script: xvfb-run make test
 
 before_install:
   npm install karma-cli -g
